objects/EUR_CRM_PRS_Question_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Answer_Condition__c</fullName>
        <label>Answer Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less Than (&lt;)</fullName>
                </value>
                <value>
                    <fullName>Greater Than or Equal (&gt;=)</fullName>
                </value>
                <value>
                    <fullName>Equal (=)</fullName>
                </value>
                <value>
                    <fullName>Greater Than (&gt;)</fullName>
                </value>
                <value>
                    <fullName>Less Than or Equal (&lt;=)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Answer_Statement__c</fullName>
        <formula>EUR_CRM_PRS_Question__r.EUR_CRM_Question_Statement__c</formula>
        <label>Answer Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;PRT&quot;), &quot;PRT&quot;, 
		IF(CONTAINS(RecordType.DeveloperName, &quot;IDL&quot;), &quot;IDL&quot;, 
		IF(CONTAINS(RecordType.DeveloperName, &quot;CCA&quot;), &quot;CCA&quot;,
		RIGHT(LEFT(RecordType.DeveloperName,6),2))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Picklist_Display_Order__c</fullName>
        <label>Criteria Picklist Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Picklist_Label__c</fullName>
        <label>Criteria Picklist Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Picklist_Value__c</fullName>
        <label>Criteria Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Threshold_Currency__c</fullName>
        <label>Criteria Threshold (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Threshold_Number__c</fullName>
        <label>Criteria Threshold (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Weight__c</fullName>
        <label>Criteria Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_PRS_Question__c</fullName>
        <label>Question</label>
        <referenceTo>EUR_CRM_PRS_Question__c</referenceTo>
        <relationshipLabel>PRS Question Criteria (EU)</relationshipLabel>
        <relationshipName>EUR_CRM_PRS_Question_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PRS Question Criteria (EU)</label>
    <listViews>
        <fullName>EUR_AT_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_AT_PRS_Question_Criteria</value>
        </filters>
        <label>EUR AT All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_BE_PRS_Question_Criteria</value>
        </filters>
        <label>EUR BE All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Question_Criteria_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_BG_PRS_Question_Criteria</value>
        </filters>
        <label>EUR BG All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CCA_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_CCA_PRS_Question_Criteria</value>
        </filters>
        <label>EUR CCA All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CCA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CH_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_CH_PRS_Question_Criteria</value>
        </filters>
        <label>EUR CH All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DB_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_DB_PRS_Question_Criteria</value>
        </filters>
        <label>EUR DB All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DE_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_DE_PRS_Question_Criteria</value>
        </filters>
        <label>EUR DE All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_DK_PRS_Question_Criteria</value>
        </filters>
        <label>EUR DK All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DO_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_DO_PRS_Question_Criteria</value>
        </filters>
        <label>EUR DO All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_FI_PRS_Question_Criteria</value>
        </filters>
        <label>EUR FI All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_GB_PRS_Question_Criteria</value>
        </filters>
        <label>EUR GB All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_IDL_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_IDL_PRS_Question_Criteria</value>
        </filters>
        <label>EUR IDL All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_IDL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_IT_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_IT_PRS_Question_Criteria</value>
        </filters>
        <label>EUR IT All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_IT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_MA_All_PRS_Question_Criteria_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_MA_PRS_Question_Criteria</value>
        </filters>
        <label>EUR MA All PRS Question Criteria View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_MA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_NG_PRS_Question_Criteria</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_PRS_Question__c</columns>
        <columns>EUR_CRM_Criteria_Weight__c</columns>
        <columns>EUR_CRM_Answer_Statement__c</columns>
        <columns>EUR_CRM_Answer_Condition__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Currency__c</columns>
        <columns>EUR_CRM_Criteria_Threshold_Number__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Label__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Value__c</columns>
        <columns>EUR_CRM_Criteria_Picklist_Display_Order__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Criteria__c.EUR_NG_PRS_Question_Criteria</value>
        </filters>
        <label>EUR NG PRS Question Criteria</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>EUR_NG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-QC-{0000000000}</displayFormat>
        <label>PRS Question Criteria No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Question Criteria (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AT_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR AT PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR BE PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR BG PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CCA_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR CCA PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR CH PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR DB PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR DE PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR DK PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DO_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR DO PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR FI PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_GB_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR GB PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_IDL_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR IDL PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_IT_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR IT PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR KE PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR MA PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR NG PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NL_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR NL PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR PT PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR RU PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_SE_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR SE PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>EUR ZA PRS Question Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Question_Criteria</fullName>
        <active>true</active>
        <label>PRS Question Criteria</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>